# savh_sheets2pg

./: .env.example  .gitignore  README.md  pyproject.toml
data/: SAVH_OPERATION.sql
scripts/: reset_bd.sh
src/savh_etl/: cli.py  logging_config.py  settings.py
src/savh_etl/extract/: extract.py
src/savh_etl/io/: excel_client.py  pg_client.py
src/savh_etl/load/: ddl.py  load.py  load_strategy.py
src/savh_etl/orchestration/: runner.py
src/savh_etl/sql/: 01_schema.sql  02_tables.sql  03_constraints.sql  04_foreign_keys.sql  05_indexes.sql  06_comments.sql  07_triggers.sql
src/savh_etl/transform/: build.py  casting.py  cleaning.py  derive.py  mapping.py  pipeline.py  registry.py  steps.py  transform.py
src/savh_etl/transform/tables/: all_tables.py  clientes.py  codigos.py  compras_producto.py  compras_producto_items.py  contratos_vendedor.py  destinatarios.py  dim_base_comision_vendedor.py  dim_calibres.py  dim_categorias.py  dim_convenciones.py  dim_estados_compra.py  dim_estados_despacho.py  dim_estados_pedido.py  dim_estados_venta.py  dim_estados_venta_facturacion.py  dim_estados_venta_pago.py  dim_grupos_egresos.py  dim_medios_pago.py  dim_modelos_comerciales.py  dim_tipo_contrato_vendedor.py  dim_tipos_cliente.py  dim_tipos_economicos.py  dim_tipos_egreso.py  dim_tipos_venta.py  dim_variedades.py  egresos.py  entregas.py  ingresos_producto.py  ingresos_producto_items.py  mermas.py  pagos.py  pagos_compra.py  pedidos.py  pedidos_items.py  productos.py  proveedores.py  (+5 more)
src/savh_etl/utils/: dataframe.py  logging.py
test/: test_transform_smoke.py
