[project]
name = "savh-sheets2pg"
version = "0.1.0"
description = "ETL de SAVH para pasar la BD de Google Sheets a PostgreSQL."
authors = [
    {name = "Joaquin Farias",email = "joaquinfarias109@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (<3)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.3.1,<15.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.48.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "savh_etl", from = "src" }]

[tool.poetry.scripts]
savh-etl = "savh_etl.cli:app"
